# transport-rental-backend

./: .env  .env.dev  .gitignore  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
payment_service/: Dockerfile  README.md  alembic.ini  pyproject.toml
payment_service/alembic/: env.py
payment_service/alembic/versions/: 4624c6d44336_add_user_id_to_payments.py  9ce661dc1843_add_payments_table.py
payment_service/app/: main.py
payment_service/app/core/: config.py
payment_service/app/db/: backend_pre_start.py  session.py
payment_service/app/grpc/: booking_payment_pb2.py  user_pb2_grpc.py
payment_service/app/models/: __init__.py  payment.py
payment_service/app/schemas/: payment.py
payment_service/app/services/: payment_service.py
payment_service/app/utils/: grpc.py  kafka_producer.py
payment_service/tests/api-service/: test_admin_payments.py  test_payments.py
payment_service/tests/core/: test_security.py
user_service/: Dockerfile  README.md  pyproject.toml
user_service/alembic/: env.py
user_service/alembic/versions/: ec7790ee2205_init_sqlite_schema.py
user_service/app/: main.py
user_service/app/api/: deps.py
user_service/app/core/: config.py  security.py
user_service/app/db/: initial_data.py
user_service/app/grpc/: server.py  user_pb2.py  user_pb2_grpc.py
user_service/app/models/: user.py
user_service/app/schemas/: user.py  validators.py
user_service/app/utils/: kafka_producer.py  (+1 more)
user_service/scripts/: initialize.sh  supervisord.conf  wait-for-kafka.sh
user_service/tests/: conftest.py
(+95 files in other folders)
